--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -4,5 +4,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AnabiDatabase": "Data Source=.\\SQLExpress;Initial Catalog=Anabi;User Id=sa;Password=puiu2108;"
   }
 }
+
