--- a/Anabi.DataAccess.Repositories/Anabi.DataAccess.Repositories.csproj
+++ b/Anabi.DataAccess.Repositories/Anabi.DataAccess.Repositories.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Anabi.DataAccess.Abstractions\Anabi.DataAccess.Abstractions.csproj" />
+    <ProjectReference Include="..\Anabi.DataAccess.Ef\Anabi.DataAccess.Ef.csproj" />
     <ProjectReference Include="..\Anabi.Domain.Core\Anabi.Domain.Core.csproj" />
   </ItemGroup>
 
