--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AnabiDatabase": "Data Source=.\\SQLExpress;Initial Catalog=Anabi;User Id=sa;Password=puiu2108;"
+    "AnabiDatabase": "Data Source=anabidbserver.database.windows.net;Initial Catalog=AnabiDbaaS;User Id=anabi;Password=#Parola123#;"
   }
 }
 
