edited db connection

--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AnabiDatabase": "Data Source=anabidbserver.database.windows.net;Initial Catalog=AnabiDbaaS;User Id=anabi;Password=#Parola123#;"
+    "AnabiDatabase": "Data Source=anabidb;Initial Catalog=AnabiDb;User Id=anabi;Password=123;"
   }
 }
 
