--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ bin/
 obj/
 ScaffoldingReadme.txt
 /.vs
+**/appsettings.Development.json
+Anabi/.DS_Store
+AnabiControllers.Tests/.DS_Store
+Tests.GeneratedStubs/.DS_Store
+.DS_Store
+*.userprefs
+Anabi/appsettings.Development.json
