--- a/Anabi/appsettings.Development.json
+++ b/Anabi/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AnabiDatabase": "Data Source=localhost,32771;Initial Catalog=AnabiDb;User Id=sa;Password=ComplexPassword2017!;"
   }
 }
