ANABI-82 trecut features la singular mutat handlerele care modifica starea in Domain redenumit Domain.Core in Domain deoarece in el se afla tot domeniul aplicatiei nu doar cel Core scos assemblyurile Abstractions si Repository si mutat temporar clasele in Domain (se va renunta complet la ele) refactorizat handlere multiple intr-un singur fisier in Web : grupat controllerele pe foldere de features

--- a/Anabi/Anabi.csproj
+++ b/Anabi/Anabi.csproj
@@ -36,10 +36,11 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Anabi.DataAccess.Abstractions\Anabi.DataAccess.Abstractions.csproj" />
+    <None Include="appsettings.Development.json" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Anabi.DataAccess.Ef\Anabi.DataAccess.Ef.csproj" />
-    <ProjectReference Include="..\Anabi.DataAccess.Repositories\Anabi.DataAccess.Repositories.csproj" />
-    <ProjectReference Include="..\Anabi.Domain.Core\Anabi.Domain.Core.csproj" />
+    <ProjectReference Include="..\Anabi.Domain.Core\Anabi.Domain.csproj" />
   </ItemGroup>
 
 </Project>
