ANABI-107 New API model; Swagger documentation

--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -2,12 +2,11 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
   },
   "ConnectionStrings": {
-    "AnabiDatabase": ""
+    "AnabiDatabase": "Data Source=anabiserver.database.windows.net;Initial Catalog=anabidb-test;User Id=anabi;Password=#Parola123#;"
   }
 }
+
