--- a/Anabi/Anabi.csproj
+++ b/Anabi/Anabi.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
   </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.0\Anabi.xml</DocumentationFile>
+  </PropertyGroup>
 
   <ItemGroup>
     <None Remove="anabi-apilog-20170829.txt" />
