Create XML comments in release as well

--- a/Anabi/Anabi.csproj
+++ b/Anabi/Anabi.csproj
@@ -8,6 +8,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netcoreapp2.0\Anabi.xml</DocumentationFile>
   </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.0\Anabi.xml</DocumentationFile>
+  </PropertyGroup>
 
   <ItemGroup>
     <None Remove="anabi-apilog-20170829.txt" />
