ANABI-92 Added JWT infrastructure

--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "AnabiDatabase": ""
+  },
+  "Jwt": {
+    "Key": "Kd0EoyNwZvcqIb4f",
+    "Issuer": "http://localhost:63754/"
   }
 }
