--- a/Anabi.Domain.Core/Anabi.Domain.csproj
+++ b/Anabi.Domain.Core/Anabi.Domain.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Anabi.Common\Anabi.Common.csproj" />
     <ProjectReference Include="..\Anabi.DataAccess.Ef\Anabi.DataAccess.Ef.csproj" />
   </ItemGroup>
 
