--- a/Anabi/Anabi.csproj
+++ b/Anabi/Anabi.csproj
@@ -45,5 +45,6 @@
     <ProjectReference Include="..\Anabi.Domain.Core\Anabi.Domain.csproj" />
     <ProjectReference Include="..\Anabi.Security\Anabi.Security.csproj" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
   
 </Project>
