--- a/Anabi.DataAccess.Ef/Anabi.DataAccess.Ef.csproj
+++ b/Anabi.DataAccess.Ef/Anabi.DataAccess.Ef.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Anabi.Common\Anabi.Common.csproj" />
+  </ItemGroup>
   
 </Project>
