--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       ACCEPT_EULA: Y
     volumes:
       - mssql-storage:/var/opt/mssql
+    # Export SQL port so that we can connect to it, see Db, and also develop on local computer
+    ports:
+      - 1433:1433
 
 volumes:
   mssql-storage:
