--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,13 +20,13 @@ steps:
   inputs:
     command: restore
 
-    projects: '$(Parameters.RestoreBuildProjects)'
+    projects: '$(buildProjects)'
 
 
 - task: DotNetCoreCLI@2
   displayName: Build
   inputs:
-    projects: '$(Parameters.RestoreBuildProjects)'
+    projects: '$(buildProjects)'
 
     arguments: '--configuration $(BuildConfiguration)'
 
