--- a/azure-pipelines-docker.yml
+++ b/azure-pipelines-docker.yml
@@ -12,7 +12,7 @@ variables:
   
 - task: DotNetCoreInstaller@0
   inputs:
-    version: '2.1.401' # replace this value with the version that you need for your project
+    version: '2.1.401'
 
 steps:
 - script: |
