--- a/Anabi.Integration.Tests/Anabi.Integration.Tests.csproj
+++ b/Anabi.Integration.Tests/Anabi.Integration.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EfCore.TestSupport" Version="1.8.0" />
     <PackageReference Include="MediatR" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
