--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AnabiDatabase": "Data Source=db;Initial Catalog=anabidb-test;User Id=sa;Password=Puiu2108####;"
+    "AnabiDatabase": "Server=COSMI\\SQLEXPRESS;Database=anabidb-test;Trusted_Connection=True;"
   },
   "Jwt": {
     "Key": "Kd0EoyNwZvcqIb4f",
