Created new class library for importing courts into database + tests and update NewtonSoft Json from 12.0.1 to 12.0.2
Also added neccesary logic for seeding the database in DbInitializer.cs file

--- a/Anabi.DataAccess.Ef/Anabi.DataAccess.Ef.csproj
+++ b/Anabi.DataAccess.Ef/Anabi.DataAccess.Ef.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190423034531_20190423_removeFields_from_InstitutionDb.cs" />
+    <Compile Remove="Migrations\20190423034531_20190423_removeFields_from_InstitutionDb.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3">
@@ -15,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Anabi.Common\Anabi.Common.csproj" />
+    <ProjectReference Include="..\Anabi.InstitutionsImporter\Anabi.InstitutionsImporter.csproj" />
   </ItemGroup>
   
 </Project>
