Removed healthcheks from repo

--- a/Anabi/appsettings.json
+++ b/Anabi/appsettings.json
@@ -11,5 +11,27 @@
   "Jwt": {
     "Key": "Kd0EoyNwZvcqIb4f",
     "Issuer": "http://localhost:63754/"
+  },
+  "HealthChecks-UI": {
+    "HealthChecks": [
+      {
+        "Name": "API Backend",
+        "Uri": "http://backend.anabi-dev.code4.ro/health/api"
+      },
+      {
+        "Name": "SQL Server",
+        "Uri": "http://backend.anabi-dev.code4.ro/health/sql"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
