--- a/Anabi.InstitutionsImporter.Tests/Anabi.InstitutionsImporter.Tests.csproj
+++ b/Anabi.InstitutionsImporter.Tests/Anabi.InstitutionsImporter.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -15,6 +15,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Anabi.InstitutionsImporter\Anabi.InstitutionsImporter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="institutions.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
