--- a/Anabi.InstitutionsImporter/Anabi.InstitutionsImporter.csproj
+++ b/Anabi.InstitutionsImporter/Anabi.InstitutionsImporter.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="institutions.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
