--- a/AnabiControllers.Tests/AnabiControllers.Tests.csproj
+++ b/AnabiControllers.Tests/AnabiControllers.Tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
