--- a/Anabi.Domain.Tests/Anabi.Domain.Tests.csproj
+++ b/Anabi.Domain.Tests/Anabi.Domain.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Anabi.DataAccess.Ef\Anabi.DataAccess.Ef.csproj" />
     <ProjectReference Include="..\Anabi.Domain.Core\Anabi.Domain.csproj" />
+    <ProjectReference Include="..\Anabi.Tests.Common\Anabi.Tests.Common.csproj" />
     <ProjectReference Include="..\Anabi\Anabi.csproj" />
   </ItemGroup>
 
