--- a/Infrastructure/Kubernetes/Pulumi.dev.yaml
+++ b/Infrastructure/Kubernetes/Pulumi.dev.yaml
@@ -1,3 +1,4 @@
 config:
   azure:environment: public
-  azure:location: westeurope
+  azure:location: WestEurope
+  pulumi:template: azure-typescript
