--- a/Infrastructure/Kubernetes/Pulumi.yaml
+++ b/Infrastructure/Kubernetes/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: AnabiInfrastructure
+name: Anabi-Kubernetes
 runtime: nodejs
-description: Azure infrastructure for Anabi
+description: Kubernetes infrastructure for Anabi
